cc_test(
    name = "parallel_critical_test",
    size = "small",
    srcs = ["parallel_critical_test.cc"],
    deps = [
        "//src/support:parallel",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "lifetime_test",
    size = "small",
    srcs = ["lifetime_test.cc"],
    deps = [
        "//src/support:lifetime",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "thread_workspace_test",
    size = "small",
    srcs = ["thread_workspace_test.cc"],
    deps = [
        "//src/support:thread_workspace",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "aligned_arena_test",
    size = "small",
    srcs = ["aligned_arena_test.cc"],
    deps = [
        "//src/support:aligned_arena",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "yield_curve_test",
    size = "small",
    srcs = ["yield_curve_test.cc"],
    deps = [
        "//src/math:yield_curve",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "rate_spec_test",
    size = "small",
    srcs = ["rate_spec_test.cc"],
    deps = [
        "//src/option:option_spec",
        "//src/math:yield_curve",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "black_scholes_pde_rate_fn_test",
    size = "small",
    srcs = ["black_scholes_pde_rate_fn_test.cc"],
    deps = [
        "//src/pde/operators:black_scholes_pde",
        "//src/math:yield_curve",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "safe_math_test",
    size = "small",
    srcs = ["safe_math_test.cc"],
    deps = [
        "//src/math:safe_math",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_axes_test",
    size = "small",
    srcs = ["price_table_axes_test.cc"],
    deps = [
        "//src/option/table:price_table_axes",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_tensor_test",
    size = "small",
    srcs = ["price_tensor_test.cc"],
    deps = [
        "//src/option/table:price_tensor",
        "//src/support:aligned_arena",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_metadata_test",
    size = "small",
    srcs = ["price_table_metadata_test.cc"],
    deps = [
        "//src/option/table:price_table_metadata",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_surface_test",
    size = "small",
    srcs = ["price_table_surface_test.cc"],
    deps = [
        "//src/option/table:price_table_surface",
        "//src/support:aligned_arena",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_config_test",
    size = "small",
    srcs = ["price_table_config_test.cc"],
    deps = [
        "//src/option/table:price_table_config",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_test",
    size = "small",
    srcs = ["price_table_builder_test.cc"],
    deps = [
        "//src/option/table:price_table_builder",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_custom_grid_test",
    size = "small",
    srcs = ["price_table_builder_custom_grid_test.cc"],
    deps = [
        "//src/option/table:price_table_builder",
        "//src/pde/core:time_domain",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_custom_grid_advanced_test",
    size = "small",
    srcs = ["price_table_builder_custom_grid_advanced_test.cc"],
    deps = [
        "//src/option/table:price_table_builder",
        "//src/pde/core:time_domain",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_custom_grid_diagnosis_test",
    size = "small",
    srcs = ["price_table_builder_custom_grid_diagnosis_test.cc"],
    deps = [
        "//src/option/table:price_table_builder",
        "//src/pde/core:time_domain",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_root_cause_test",
    size = "small",
    srcs = ["price_table_builder_root_cause_test.cc"],
    deps = [
        "//src/option/table:price_table_builder",
        "//src/pde/core:time_domain",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bspline_fitting_stats_test",
    size = "small",
    srcs = ["bspline_fitting_stats_test.cc"],
    deps = [
        "//src/math:bspline_nd_separable",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_result_test",
    size = "small",
    srcs = ["price_table_result_test.cc"],
    deps = [
        "//src/option/table:price_table_builder",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_result_test",
    size = "small",
    srcs = ["price_table_builder_result_test.cc"],
    deps = [
        "//src/option/table:price_table_builder",
        "//src/option/table:price_table_axes",
        "//src/option/table:price_table_config",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_grid_test",
    size = "small",
    srcs = ["price_table_builder_grid_test.cc"],
    deps = [
        "//src/option/table:price_table_builder",
        "//src/option/table:price_table_axes",
        "//src/option/table:price_table_config",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_factories_test",
    size = "small",
    srcs = ["price_table_builder_factories_test.cc"],
    deps = [
        "//src/option/table:price_table_builder",
        "//src/option:option_chain",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "recursion_helpers_test",
    size = "small",
    srcs = ["recursion_helpers_test.cc"],
    deps = [
        "//src/option/table:recursion_helpers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_test",
    srcs = ["grid_test.cc"],
    deps = [
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_expected_test",
    srcs = ["grid_expected_test.cc"],
    deps = [
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_with_solution_test",
    srcs = ["grid_with_solution_test.cc"],
    deps = [
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_snapshot_test",
    srcs = ["grid_snapshot_test.cc"],
    deps = [
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "pde_workspace_test",
    srcs = ["pde_workspace_test.cc"],
    deps = [
        "//src/pde/core:pde_workspace",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "boundary_conditions_test",
    srcs = ["boundary_conditions_test.cc"],
    deps = [
        "//src/pde/core:boundary_conditions",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "root_finding_test",
    srcs = ["root_finding_test.cc"],
    deps = [
        "//src/math:root_finding",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "brent_cpp_test",
    srcs = ["brent_cpp_test.cc"],
    deps = [
        "//src/math:root_finding",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "pde_solver_test",
    srcs = ["pde_solver_test.cc"],
    deps = [
        "//src/pde/core:pde_solver",
        "//src/pde/core:pde_workspace",
        "//src/pde/core:grid",
        "//src/pde/core:boundary_conditions",
        "//src/pde/operators:operator_factory",
        "//src/pde/operators:laplacian_pde",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
        "-fopenmp-simd",
    ],
)

cc_test(
    name = "pde_solver_snapshot_test",
    srcs = ["pde_solver_snapshot_test.cc"],
    deps = [
        "//src/pde/core:pde_solver",
        "//src/pde/core:pde_workspace",
        "//src/pde/core:grid",
        "//src/pde/core:boundary_conditions",
        "//src/pde/operators:operator_factory",
        "//src/pde/operators:laplacian_pde",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
        "-fopenmp-simd",
    ],
)

cc_test(
    name = "time_domain_test",
    srcs = ["time_domain_test.cc"],
    deps = [
        "//src/pde/core:time_domain",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "trbdf2_config_test",
    srcs = ["trbdf2_config_test.cc"],
    deps = [
        "//src/pde/core:trbdf2_config",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "tridiagonal_solver_test",
    srcs = ["tridiagonal_solver_test.cc"],
    deps = [
        "//src/math:thomas_solver",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)


cc_test(
    name = "iv_solver_test",
    srcs = ["iv_solver_test.cc"],
    deps = [
        "//src/option:iv_solver_fdm",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "iv_solver_expected_test",
    srcs = ["iv_solver_expected_test.cc"],
    deps = [
        "//src/option:iv_solver_fdm",
        "//src/option:iv_result",
        "//src/support:error_types",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

# DISABLED: Pre-existing failure (solution[25] == 0 instead of 2.0)
# cc_test(
#     name = "temporal_event_test",
#     size = "small",
#     srcs = ["temporal_event_test.cc"],
#     deps = [
#         "//src/pde/core:pde_solver",
#         "//src/pde/core:pde_workspace",
#         "//src/pde/core:grid",
#         "//src/pde/operators:laplacian_pde",
#         "//src/pde/operators:operator_factory",
#         "//src/pde/core:boundary_conditions",
#         "@googletest//:gtest_main",
#     ],
#     copts = ["-std=c++23", "-fopenmp-simd"],
# )

cc_test(
    name = "obstacle_test",
    size = "small",
    srcs = ["obstacle_test.cc"],
    deps = [
        "//src/pde/core:pde_solver",
        "//src/pde/core:grid",
        "//src/pde/core:pde_workspace",
        "//src/pde/operators:laplacian_pde",
        "//src/pde/operators:operator_factory",
        "//src/pde/core:boundary_conditions",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-fopenmp-simd",
    ],
)

cc_test(
    name = "grid_spacing_test",
    srcs = ["grid_spacing_test.cc"],
    deps = [
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_spacing_data_test",
    srcs = ["grid_spacing_data_test.cc"],
    deps = [
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_spacing_mdspan_test",
    srcs = ["grid_spacing_mdspan_test.cc"],
    deps = [
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "american_option_solver_test",
    size = "small",
    srcs = ["american_option_solver_test.cc"],
    deps = [
        "//src/option:american_option",
        "//src/option:american_option_batch",
        "@googletest//:gtest_main",
    ],
    tags = ["manual"],  # Disabled: validation expectations changed with new API
)

cc_test(
    name = "american_option_test",
    size = "small",
    srcs = ["american_option_test.cc"],
    deps = [
        "//src/option:american_option",
        "//src/option:american_option_batch",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "american_option_result_test",
    size = "small",
    srcs = ["american_option_result_test.cc"],
    deps = [
        "//src/option:american_option_result",
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "real_option_data_test",
    srcs = ["real_option_data_test.cc"],
    deps = [
        "//src/option:american_option",
        "//third_party/arrow",
        "@googletest//:gtest_main",
    ],
    data = ["//data:real_option_chain.arrow"],
    tags = ["manual"],  # Disabled: test data incompatible with post-CRTP solver
)

cc_test(
    name = "thomas_cubic_spline_test",
    srcs = ["thomas_cubic_spline_test.cc"],
    deps = [
        "//src/math:thomas_solver",
        "//src/math:cubic_spline_solver",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "cubic_spline_2d_test",
    srcs = ["cubic_spline_2d_test.cc"],
    deps = [
        "//src/math:cubic_spline_solver",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bspline_collocation_1d_test",
    srcs = ["bspline_collocation_1d_test.cc"],
    deps = [
        "//src/math:bspline_collocation",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "bspline_fitter_4d_separable_test",
    srcs = ["bspline_fitter_4d_separable_test.cc"],
    deps = [
        "//src/math:bspline_nd_separable",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-fopenmp",
    ],
    linkopts = ["-fopenmp"],
)

cc_test(
    name = "cpu_diagnostics_test",
    srcs = ["cpu/cpu_diagnostics_test.cc"],
    deps = [
        "//src/support/cpu:cpu_diagnostics",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "centered_difference_facade_test",
    srcs = ["centered_difference_facade_test.cc"],
    deps = [
        "//src/pde/operators:centered_difference_facade",
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "target_clones_test",
    srcs = ["operators/target_clones_test.cc"],
    deps = [
        "//src/pde/operators:centered_difference_scalar",
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-fopenmp-simd",
    ],
)

# Test suites defined for convenience
# Fast tests: bazel test //tests/... --test_tag_filters=-manual,-slow
# Slow tests: bazel test //tests/... --test_tag_filters=slow

cc_test(
    name = "pde_solver_simd_benchmark",
    srcs = ["pde_solver_simd_benchmark.cc"],
    deps = [
        "//src/pde/core:pde_solver",
        "//src/support/cpu:cpu_diagnostics",
        "@googletest//:gtest_main",
    ],
    tags = ["manual"],  # Exclude from regular test runs (prints diagnostics)
)

# DISABLED: Failing tests (needs investigation)
# cc_test(
#     name = "price_table_4d_integration_test",
#     srcs = ["price_table_4d_integration_test.cc"],
#     deps = [
#         "//src/option/table:price_table_builder",
#         "//src/option/table:price_table_surface",
#         "@googletest//:gtest_main",
#     ],
#     copts = ["-std=c++23"],
# )

# DISABLED: Failing tests (needs investigation)
# cc_test(
#     name = "price_table_end_to_end_performance_test",
#     srcs = ["price_table_end_to_end_performance_test.cc"],
#     deps = [
#         "//src/option/table:price_table_builder",
#         "@googletest//:gtest_main",
#     ],
#     copts = ["-std=c++23"],
#     size = "large",
#     timeout = "moderate",
# )

cc_test(
    name = "crc64_test",
    srcs = ["crc64_test.cc"],
    deps = [
        "//src/support:crc64",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_workspace_test",
    srcs = ["price_table_workspace_test.cc"],
    deps = [
        "//src/option/table:price_table_workspace",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bspline_banded_solver_test",
    srcs = ["bspline_banded_solver_test.cc"],
    deps = [
        "//src/math:bspline_nd_separable",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-fopenmp",
    ],
    linkopts = ["-fopenmp"], 
)

cc_test(
    name = "bspline_workspace_test",
    srcs = ["bspline_workspace_test.cc"],
    deps = [
        "//src/math:bspline_nd_separable",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-fopenmp",
    ],
    linkopts = ["-fopenmp"], 
    size = "small",
)

cc_test(
    name = "bspline_condition_number_stress_test",
    srcs = ["bspline_condition_number_stress_test.cc"],
    deps = [
        "//src/math:bspline_nd_separable",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-fopenmp",
    ],
    linkopts = ["-fopenmp"], 
    size = "medium",
    timeout = "moderate",
)

cc_test(
    name = "quantlib_accuracy_test",
    srcs = ["quantlib_accuracy_test.cc"],
    deps = [
        "//src/option:american_option",
        "//src/option:iv_solver_fdm",
        "@googletest//:gtest_main",
    ],
    linkopts = ["-lQuantLib"],
    size = "medium",
    timeout = "moderate",
    tags = ["manual"],  # Disabled: Greeks accuracy needs improvement for non-uniform grids
)

cc_test(
    name = "quantlib_accuracy_batch_test",
    srcs = [
        "quantlib_accuracy_batch_test.cc",
        "quantlib_validation_framework.hpp",
    ],
    deps = [
        "//src/option:american_option",
        "//src/option:iv_solver_fdm",
        "//src/option:iv_solver_interpolated",
        "//src/option/table:price_table_builder",
        "//src/option/table:price_table_surface",
        "@googletest//:gtest_main",
    ],
    linkopts = ["-lQuantLib"],
    size = "large",
    timeout = "long",
    tags = ["manual"],  # Manual due to long build time for price table
)

cc_test(
    name = "american_option_new_api_test",
    size = "small",
    srcs = ["american_option_new_api_test.cc"],
    deps = [
        "//src/option:american_option",
        "//src/option:american_option_result",
        "//src/pde/core:pde_workspace",
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "bspline_nd_test",
    size = "small",
    srcs = ["bspline_nd_test.cc"],
    deps = [
        "//src/math:bspline_nd",
        "//src/math:bspline_basis",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "bspline_nd_mdspan_test",
    size = "small",
    srcs = ["bspline_nd_mdspan_test.cc"],
    deps = [
        "//src/math:bspline_nd",
        "//src/math:bspline_basis",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "american_option_batch_test",
    size = "small",
    srcs = ["american_option_batch_test.cc"],
    deps = [
        "//src/option:american_option_batch",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "batch_solver_custom_grid_test",
    size = "small",
    srcs = ["batch_solver_custom_grid_test.cc"],
    deps = [
        "//src/option:american_option_batch",
        "//src/pde/core:grid",
        "//src/pde/core:time_domain",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "mdspan_integration_test",
    srcs = ["mdspan_integration_test.cc"],
    deps = [
        "@mdspan//:mdspan",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "lapack_banded_layout_test",
    srcs = ["lapack_banded_layout_test.cc"],
    deps = [
        "//src/math:lapack_banded_layout",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "mdspan_integration_e2e_test",
    srcs = ["mdspan_integration_e2e_test.cc"],
    deps = [
        "//src/math:banded_matrix_solver",
        "//src/math:bspline_nd",
        "//src/pde/core:grid",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "normalized_solver_regression_test",
    size = "small",
    srcs = ["normalized_solver_regression_test.cc"],
    deps = [
        "//src/option:american_option_batch",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "normalized_chain_accuracy_test",
    srcs = [
        "normalized_chain_accuracy_test.cc",
        "quantlib_validation_framework.hpp",
    ],
    deps = [
        "//src/option:american_option",
        "//src/option:american_option_batch",
        "//src/option:iv_solver_fdm",
        "//src/option:iv_solver_interpolated",
        "@googletest//:gtest_main",
    ],
    linkopts = ["-lQuantLib"],
    size = "large",
    timeout = "long",
)

cc_test(
    name = "iv_error_types_test",
    srcs = ["iv_error_types_test.cc"],
    deps = [
        "//src/support:error_types",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "interpolation_error_test",
    srcs = ["interpolation_error_test.cc"],
    deps = [
        "//src/support:error_types",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "iv_result_test",
    srcs = ["iv_result_test.cc"],
    deps = [
        "//src/option:iv_result",
        "//src/support:error_types",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "iv_solver_integration_test",
    srcs = ["iv_solver_integration_test.cc"],
    deps = [
        "//src/option:iv_solver_fdm",
        "//src/option:iv_result",
        "//src/support:error_types",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "option_chain_test",
    srcs = ["option_chain_test.cc"],
    deps = [
        "//src/option:option_chain",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "iv_solver_interpolated_test",
    size = "small",
    srcs = ["iv_solver_interpolated_test.cc"],
    deps = [
        "//src/option:iv_solver_interpolated",
        "//src/option/table:price_table_surface",
        "//src/option/table:price_table_axes",
        "//src/option/table:price_table_metadata",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "batch_bracketing_test",
    size = "small",
    srcs = ["batch_bracketing_test.cc"],
    deps = [
        "//src/option:batch_bracketing",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "simple_price_test",
    srcs = ["simple_price_test.cc"],
    deps = [
        "//src/simple:price",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "simple_timestamp_test",
    srcs = ["simple_timestamp_test.cc"],
    deps = [
        "//src/simple:timestamp",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "simple_option_types_test",
    srcs = ["simple_option_types_test.cc"],
    deps = [
        "//src/simple:option_types",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "simple_option_chain_test",
    srcs = ["simple_option_chain_test.cc"],
    deps = [
        "//src/simple:option_chain",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "simple_converter_test",
    srcs = ["simple_converter_test.cc"],
    deps = [
        "//src/simple:converter",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "simple_chain_builder_test",
    srcs = ["simple_chain_builder_test.cc"],
    deps = [
        "//src/simple:chain_builder",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "simple_vol_surface_test",
    srcs = ["simple_vol_surface_test.cc"],
    deps = [
        "//src/simple:vol_surface",
        "//src/simple:chain_builder",
        "@googletest//:gtest_main",
    ],
)
